feat: 工具驱动的计划模式 + 文件编辑 diff 查看
计划模式(plan mode)
- 计划改为工具驱动: create_plan / update_plan / update_task / complete_task
- PlanKernel 收敛为唯一读写路径: 乐观版本仲裁 + 计划/任务状态机 + PLAN_UPDATE 事件推送
- 人工审批: PlanApprovalGate/Registry + PlanApprovalWaiter, 新增 approve/revise/reject
  以及待审批期间的任务字段编辑接口(带 version 冲突校验)
- agent 循环仅通过 PlanLoopHook 的三个切入点接入计划能力, 移除旧的
  PlanCoordinator / PlanTextParser / PlanState 等文本解析实现
- 新增 PLANING / EXECUTE 循环边界: PLANING 只暴露只读工具, 审批通过后切到 EXECUTE

harness-example
- 文件修改审批条目支持点击展开查看 diff(按需拉取旧/新全文, 时间线卡片复用同一逻辑)
- 控制器/服务/DTO 拆分, 新增 PlanController / AgentController / SessionController 等